# AI-Projects

./: README.md
Todo_Agent/: README.md
crypto-trade-agent/: .env-example  .gitignore  README.md  api.py  app.py  docker-compose.yml  mlops-diagram.drawio  mlops_system.drawio  pyproject.toml  requirements.txt
crypto-trade-agent/.cursor/: project-documents.mdc  project-requirements.mdc
crypto-trade-agent/src/app/: config.py  main.py
crypto-trade-agent/src/app/controllers/: __init__.py  market_controller.py  portfolio_controller.py  trade_controller.py  user_controller.py
crypto-trade-agent/src/app/models/: __init__.py  crypto.py  entities.py
crypto-trade-agent/src/app/routes/: agent_routes.py  market_routes.py  portfolio_routes.py  trade_routes.py  user_routes.py
crypto-trade-agent/src/app/services/: enrichment_agent_service.py  react_agent_service.py
crypto-trade-agent/src/app/utils/: __init__.py  api_helpers.py
crypto-trade-agent/src/combined_agent/: graph.py  schemas.py  tools.py
petting-zoo_demo/: README.md  tennis_petting_zoo.ipynb
travel-planner/: README.md  langgraph.json  pyproject.toml  requirements.txt
travel-planner/src/agent/: assistants.py  conversation.py  graph.py  tools.py
voice_rag_agent/: .gitignore  README.md  pyproject.toml  requirements.txt
voice_rag_agent/evaluation/: clean_rag_eval_data.py  metrics.csv  results.jsonl  run_milestone7_eval.py
voice_rag_agent/evaluation/rag_eval_data/: asr_eval.jsonl  chunks_manifest.jsonl  qa_gold.jsonl  tts_prompts.jsonl
voice_rag_agent/src/voice_rag/: __init__.py  config.py
voice_rag_agent/src/voice_rag/UI/: README.md  index.html  vite.config.ts
voice_rag_agent/src/voice_rag/api/: __init__.py  main.py  routes.py  schemas.py
voice_rag_agent/src/voice_rag/embedding/: local_embedder.py
(+26 files in other folders)
