[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-planner-agent"
version = "0.1.0"
description = "A LangGraph-based travel planner assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langchain-community==0.3.24",       
  "langchain-core==0.3.63",             
  "langchain-google-genai==2.1.5",     
  "langgraph==0.4.7",                
  "numpy==2.2.6",                   
  "pandas==2.2.3",                      
  "pydantic==2.11.5",                   
  "pytest==8.3.5",                   
  "python-dotenv==1.1.0",              
  "pytz==2025.2",                      
  "requests==2.32.3",                   
  "sentence-transformers==4.1.0",       
  "typing-extensions==4.13.2"           
]

[tool.hatch.build.targets.wheel]
packages = ["src.agent"]
